typechecker: Add proper signed concatenation to constant evaluator